k8/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playj-accountsd
  labels:
    app: playj-accountsd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playj-accountsd
  template:
    metadata:
      labels:
        app: playj-accountsd
    spec:
      containers:
      - name: accountsd
        image: gcr.io/avian-altar-346111/playj-account-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8091
---
apiVersion: v1
kind: Service
metadata:
  name: playj-accountsd
  labels:
    app: playj-accountsd
spec:
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
  selector:
    app: playj-accountsd
