k8/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playj-paymentsd
  labels:
    app: playj-paymentsd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playj-paymentsd
  template:
    metadata:
      labels:
        app: playj-paymentsd
    spec:
      containers:
      - name: paymentsd
        image: gcr.io/avian-altar-346111/playj-payment-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8092
          name: "http"
        - containerPort: 5002
          name: "grpc"
---
apiVersion: v1
kind: Service
metadata:
  name: playj-paymentsd
  labels:
    app: playj-paymentsd
spec:
  ports:
    - protocol: TCP
      port: 8092
      targetPort: 8092
      name: "http"
    - protocol: TCP
      port: 5002
      targetPort: 5002
      name: "grpc"
  selector:
    app: playj-paymentsd
