k8/player-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playj-playerd
  labels:
    app: playj-playerd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playj-playerd
  template:
    metadata:
      labels:
        app: playj-playerd
    spec:
      containers:
      - name: playerd
        image: gcr.io/avian-altar-346111/playj-player-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8093
---
apiVersion: v1
kind: Service
metadata:
  name: playj-playerd
  labels:
    app: playj-playerd
spec:
  ports:
    - protocol: TCP
      port: 8093
      targetPort: 8093
  selector:
    app: playj-playerd
